MAE-319 Prevent Froala tooltip from wrapping and move the fullscreen button a bit more to the left

--- a/Kentico.Widget.RichText/Assets/FormComponents/Kentico.RichText/main.less
+++ b/Kentico.Widget.RichText/Assets/FormComponents/Kentico.RichText/main.less
@@ -12,6 +12,10 @@
     .fr-popup.fr-active {
         z-index: 10210 !important;
     }
+
+    .fr-tooltip {
+        white-space: nowrap;
+    }
 }
 
 .ktc-rich-text-form-component__froala {
@@ -31,7 +35,7 @@
 .ktc-btn-rich-text-save__wrapper {
     position: fixed;
     top: 0;
-    right: @ktc-base-unit;
+    right: 1.25 * @ktc-base-unit;
     z-index: @fullscreen-z-index;
 
     .ktc-btn-rich-text-save {
